force-app/main/default/objects/Opportunity/fields/Current_Speed__c.field-meta.xml
<CustomField>
    <fullName>Current_Speed__c</fullName>
    <label>Current Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>