force-app/main/default/objects/Opportunity/fields/Desired_Speed__c.field-meta.xml
<CustomField>
    <fullName>Desired_Speed__c</fullName>
    <label>Desired Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>