force-app/main/default/objects/Opportunity/fields/Opportunity_Summary__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Summary__c</fullName>
    <label>Opportunity Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>