force-app/main/default/objects/Opportunity/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fibre Broadband</fullName>
            </value>
            <value>
                <fullName>Standard Broadband</fullName>
            </value>
            <value>
                <fullName>Superfast Broadband</fullName>
            </value>
            <value>
                <fullName>Satellite Broadband</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>